--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,7 @@ lazy_static = { version = "1.4", default-features = false, optional = true }
 packable = { version = "=0.6.1", default-features = false, optional = true }
 rand = { version = "0.8", default-features = false, features = [ "std" ], optional = true }
 regex = { version = "1.5", default-features = false, features = [ "std" ], optional = true }
+rust-argon2 = { version = "1.0.0", default-features = false, optional = true }
 serde_urlencoded = { version = "0.7", default-features = false, optional = true }
 tower = { version = "0.4", default-features = false, optional = true }
 tower-http = { version = "0.3", default-features = false, features = [ "cors", "catch-panic", "trace" ], optional = true }
@@ -104,6 +105,7 @@ api = [
     "dep:packable",
     "dep:rand",
     "dep:regex",
+    "dep:rust-argon2",
     "dep:serde_urlencoded",
     "dep:tower",
     "dep:tower-http",
