--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ async-trait = { version = "0.1", default-features = false }
 bytesize = { version = "1.1", default-features = false }
 clap = { version = "3.2", default-features = false, features = [ "env", "derive", "std" ] }
 derive_more = { version = "0.99", default-features = false, features = [ "add", "add_assign", "deref", "deref_mut" ] }
-dotenv = { version = "0.15", default-features = false }
+dotenvy = { version = "0.15", default-features = false }
 dyn-clone = { version = "1.0", default-features = false }
 futures = { version = "0.3", default-features = false }
 humantime = { version = "2.1.0", default-features = false }
