--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,7 +59,7 @@ ed25519-dalek = { version = "1.0", default-features = false, features = [ "u64_b
 hex = { version = "0.4", default-features = false, optional = true }
 hyper = { version = "0.14", default-features = false, features = [ "server", "tcp", "stream" ], optional = true }
 lazy_static = { version = "1.4", default-features = false, optional = true }
-packable = { version = "=0.6.1", default-features = false, optional = true }
+packable = { version = "0.6", default-features = false, optional = true }
 rand = { version = "0.8", default-features = false, features = [ "std" ], optional = true }
 regex = { version = "1.5", default-features = false, features = [ "std" ], optional = true }
 rust-argon2 = { version = "1.0.0", default-features = false, optional = true }
@@ -69,7 +69,7 @@ tower-http = { version = "0.3", default-features = false, features = [ "cors", "
 zeroize = { version = "1.5", default-features = false, features = [ "std" ], optional = true }
 
 # INX
-bee-inx = { version = "1.0.0-beta.5", default-features = false, optional = true }
+bee-inx = { version = "1.0.0-beta.5", git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, optional = true }
 tonic = { version = "0.8", default-features = false, optional = true }
 
 # Metrics
@@ -81,8 +81,8 @@ opentelemetry-jaeger = { version = "0.17", default-features = false, features = 
 tracing-opentelemetry = { version = "0.18", default-features = false, features = ["tracing-log"], optional = true }
 
 # Stardust types
-bee-api-types-stardust = { package = "bee-api-types", version = "1.0.0-beta.7", default-features = false, features = ["axum"], optional = true }
-bee-block-stardust = { package = "bee-block", version = "1.0.0-beta.7", default-features = false, features = [ "dto", "std", "serde" ], optional = true }
+bee-api-types-stardust = { package = "bee-api-types", version = "1.0.0-beta.7", git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, features = ["axum"], optional = true }
+bee-block-stardust = { package = "bee-block", version = "1.0.0-beta.7", git = "https://github.com/iotaledger/bee.git", branch = "shimmer-develop", default-features = false, features = [ "dto", "std", "serde" ], optional = true }
 
 [dev-dependencies]
 rand = { version = "0.8", default-features = false, features = [ "std" ] }
