--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,7 +81,7 @@ opentelemetry-jaeger = { version = "0.17", default-features = false, features = 
 tracing-opentelemetry = { version = "0.18", default-features = false, features = ["tracing-log"], optional = true }
 
 # Stardust types
-bee-api-types-stardust = { package = "bee-api-types", version = "1.0.0-beta.7", default-features = false, features = ["axum"], optional = true }
+bee-api-types-stardust = { package = "bee-api-types", version = "1.0.0", default-features = false, features = ["axum"], optional = true }
 bee-block-stardust = { package = "bee-block", version = "1.0.0", default-features = false, features = [ "dto", "std", "rand", "serde"], optional = true }
 
 [dev-dependencies]
