feat(inx): update to latest version of `packable` and `bee-inx` (#729)
* WIP: bump `bee-inx`

* More WIP

* Even more WIP

* Finish bin impls

* Use more realisitic protocol parameters and fmt

* Fmt

* Fix

* Add more instrumentation

* Use testnet by default

* Right folder

* Fix payload type (#735)

* Debug info

* Bump bee-inx

* Fix payload type

* Fmt

* Use `iotaledgeer/bee-inx`

* Bump `bee-block` and `bee-inx`

* Bump `bee-api-types`

* `TryFrom`

* Don't use `TryFromWithContext` in INX writer

* Revert structure change

Co-authored-by: Alex Coats <alexandcoats@gmail.com>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -56,8 +56,8 @@ services:
     cap_drop:
       - ALL
     volumes:
-      - ./data/hornet:/app/alphanet
-      - ./config.alphanet.hornet.json:/app/config.json:ro
+      - ./data/hornet:/app/testnet
+      - ./config.testnet.hornet.json:/app/config.json:ro
     command:
       - "-c"
       - "config.json"
