doc: add rustdoc comments for `lib`

--- a/.github/workflows/_check.yml
+++ b/.github/workflows/_check.yml
@@ -14,9 +14,10 @@ jobs:
   check-and-test:
     name: '${{ inputs.os }}, ${{ inputs.rust }}'
     runs-on: ${{ inputs.os }}
-    # Unfortunately, we can't do this right now because `indexmap` does not seem to follow semver.
-    # env:
-    #   RUSTFLAGS: -D warnings -D missing-docs
+    env:
+      # Unfortunately, we can't do this right now because `indexmap` does not seem to follow semver.
+      # RUSTFLAGS: -D warnings -D missing-docs
+      RUSTFLAGS: -D missing-docs
     steps:
       - uses: actions/checkout@v2
 
