--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,7 +69,7 @@ tower-http = { version = "0.3", default-features = false, features = [ "cors", "
 zeroize = { version = "1.5", default-features = false, features = [ "std" ], optional = true }
 
 # INX
-bee-inx = { version = "1.0.0-beta.6", default-features = false, optional = true }
+bee-inx = { version = "1.0.0-rc.1", git = "http://github.com/Alex6323/bee.git", branch = "feat/bee-inx/additional-wrappers", default-features = false, optional = true }
 tonic = { version = "0.8", default-features = false, optional = true }
 
 # Metrics
@@ -81,8 +81,8 @@ opentelemetry-jaeger = { version = "0.17", default-features = false, features = 
 tracing-opentelemetry = { version = "0.18", default-features = false, features = ["tracing-log"], optional = true }
 
 # Stardust types
-bee-api-types-stardust = { package = "bee-api-types", version = "1.0.0", default-features = false, features = ["axum"], optional = true }
-bee-block-stardust = { package = "bee-block", version = "1.0.0", default-features = false, features = [ "dto", "std", "rand", "serde"], optional = true }
+bee-api-types-stardust = { package = "bee-api-types", version = "1.0.1", git = "http://github.com/Alex6323/bee.git", branch = "feat/bee-inx/additional-wrappers", default-features = false, features = ["axum"], optional = true }
+bee-block-stardust = { package = "bee-block", version = "1.0.1", git = "http://github.com/Alex6323/bee.git", branch = "feat/bee-inx/additional-wrappers", default-features = false, features = [ "dto", "std", "rand", "serde"], optional = true }
 
 [dev-dependencies]
 rand = { version = "0.8", default-features = false, features = [ "std" ] }
