feat: improve config handling

--- a/config.template.toml
+++ b/config.template.toml
@@ -2,7 +2,7 @@
 ### Listening address of the MongoDB instance.
 connect_url = "mongodb://localhost:27017"
 
-### MongoDB credentials.
+### MongoDB credentials. These fields are ignored if the connection string already contains credentials.
 username = "root"
 password = "root"
 
