--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "chronicle"
 version = "1.0.0-beta.22"
-authors = [ "IOTA Stiftung" ]
+authors = ["IOTA Stiftung"]
 edition = "2021"
 description = "IOTA permanode implemented as an IOTA Node Extension (INX)."
 readme = "README.md"
 repository = "https://github.com/iotaledger/inx-chronicle"
 license = "Apache-2.0"
-keywords = [ "iota", "storage", "permanode", "chronicle", "inx" ]
+keywords = ["iota", "storage", "permanode", "chronicle", "inx"]
 homepage = "https://www.iota.org"
 rust-version = "1.60"
 
@@ -121,7 +121,7 @@ opentelemetry = [
     "dep:tracing-opentelemetry",
 ]
 rand = [
-    "bee-block-stardust?/rand"
+    "bee-block-stardust?/rand",
 ]
 stardust = [
     "dep:bee-block-stardust",
