--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ path = "src/bin/inx-chronicle/main.rs"
 # Required
 async-trait = { version = "0.1", default-features = false }
 bytesize = { version = "1.1", default-features = false }
-clap = { version = "4.0", default-features = false, features = [ "env", "derive", "std", "help" ] }
+clap = { version = "4.0", default-features = false, features = ["env", "derive", "std", "help", "usage", "error-context", "wrap_help"] }
 derive_more = { version = "0.99", default-features = false, features = [ "add", "add_assign", "deref", "deref_mut" ] }
 dotenvy = { version = "0.15", default-features = false }
 futures = { version = "0.3", default-features = false }
