--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ async-trait = { version = "0.1", default-features = false }
 bytesize = { version = "1.1", default-features = false }
 clap = { version = "4.0", default-features = false, features = [ "env", "derive", "std" ] }
 derive_more = { version = "0.99", default-features = false, features = [ "add", "add_assign", "deref", "deref_mut" ] }
+decimal = { version = "2.1", default-features = false, features = [ "ord_subset", "rustc-serialize", "serde" ] }
 dotenvy = { version = "0.15", default-features = false }
 futures = { version = "0.3", default-features = false }
 humantime = { version = "2.1.0", default-features = false }
