--- a/config.template.toml
+++ b/config.template.toml
@@ -13,6 +13,17 @@ database_name = "chronicle"
 ### The minimum amount of connections in the pool.
 min_pool_size = 2
 
+[influxdb]
+### URL pointing to the InfluxDB instance.
+url = "http://localhost:8086"
+
+### The database name used for analytics.
+database_name = "chronicle_analytics"
+
+### InfluxDb basic credentials.
+username = "root"
+password = "password"
+
 [api]
 ### Whether API requests will be served.
 enabled = true
