feat(deps): remove dependency on `bee-inx` (#804)
* WIP

* wip

* wip

* wip

* wip

* wip

* wip

* wip

* fix rustdoc

* Remove unnecessary

* clippy

* clippy

* Fix ci-clippy-api

* Fix ci-toml

* Fix ci-doc

* Format

* address comments

Co-authored-by: Alexander Schmidt <alexander.schmidt@iota.org>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,7 +67,7 @@ tower-http = { version = "0.3", default-features = false, features = [ "cors", "
 zeroize = { version = "1.5", default-features = false, features = [ "std" ], optional = true }
 
 # INX
-bee-inx = { version = "1.0.0-beta.6", default-features = false, optional = true }
+inx = { version = "1.0.0-beta", default-features = false, optional = true }
 tonic = { version = "0.8", default-features = false, optional = true }
 
 # Metrics
@@ -80,7 +80,8 @@ tracing-opentelemetry = { version = "0.18", default-features = false, features =
 
 # Stardust types
 bee-api-types-stardust = { package = "bee-api-types", version = "1.0.1", default-features = false, features = [ "axum" ], optional = true }
-bee-block-stardust = { package = "bee-block", version = "1.0.1", default-features = false, features = [ "dto", "std", "rand"], optional = true }
+bee-block-stardust = { package = "bee-block", version = "1.0.1", default-features = false, features = [ "dto", "inx", "rand", "std" ], optional = true }
+iota-types = { git = "https://github.com/iotaledger/iota.rs", version = "1.0.0-rc", default-features = false, features = [ "dto", "std", "rand" ], optional = true }
 
 [dev-dependencies]
 rand = { version = "0.8", default-features = false, features = [ "std" ] }
@@ -111,7 +112,7 @@ api = [
     "stardust",
 ]
 inx = [ 
-    "dep:bee-inx",
+    "dep:inx",
     "dep:packable",
     "dep:tonic",
 ]
