--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -41,12 +41,10 @@ services:
       - RUST_LOG=warn,inx_chronicle=debug
     tty: true
     command:
-      - "-c"
-      - "config.toml"
-      - "--inx-addr"
-      - "http://hornet:9029"
-      - "--mongodb-conn-str"
-      - "mongodb://mongo:27017"
+      - "--config=config.toml"
+      - "--inx-addr=http://hornet:9029"
+      - "--mongodb-conn-str=mongodb://mongo:27017"
+      - "--influxdb-url=http://influx:8086"
     volumes:
       - ../config.template.toml:/app/config.toml:ro
 
