--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,9 +79,7 @@ opentelemetry-jaeger = { version = "0.17", default-features = false, features = 
 tracing-opentelemetry = { version = "0.18", default-features = false, features = [ "tracing-log" ], optional = true }
 
 # Stardust types
-bee-api-types-stardust = { package = "bee-api-types", version = "1.0.1", default-features = false, features = [ "axum" ], optional = true }
-bee-block-stardust = { package = "bee-block", version = "1.0.1", default-features = false, features = [ "dto", "inx", "rand", "std" ], optional = true }
-iota-types = { git = "https://github.com/iotaledger/iota.rs", version = "1.0.0-rc", default-features = false, features = [ "dto", "std", "rand" ], optional = true }
+iota-types = { git = "https://github.com/iotaledger/iota.rs", version = "1.0.0-rc", default-features = false, features = [ "api", "block", "std" ], optional = true }
 
 [dev-dependencies]
 rand = { version = "0.8", default-features = false, features = [ "std" ] }
@@ -122,11 +120,10 @@ opentelemetry = [
     "dep:tracing-opentelemetry",
 ]
 rand = [
-    "bee-block-stardust?/rand",
+    "iota-types?/rand",
 ]
 stardust = [
-    "dep:bee-block-stardust",
-    "dep:bee-api-types-stardust",
+    "dep:iota-types"
 ]
 
 [profile.production]
