--- a/docker/assets/grafana/datasources/influx_ds.yml
+++ b/docker/assets/grafana/datasources/influx_ds.yml
@@ -8,13 +8,10 @@ datasources:
   - name: InfluxDB
     type: influxdb
     access: proxy
-    orgId: 1
-    url: http://influx:8086
-    password: root
-    user: password
     database: chronicle_analytics
-    basicAuth: true
-    basicAuthUser:
-    basicAuthPassword:
-    withCredentials:
-    isDefault: false
+    user: root
+    url: http://influx:8086
+    jsonData:
+      httpMode: GET
+    secureJsonData:
+      password: password
