feat(deps): switch from `bee` to `iota-types` (#813)
* feat(deps): switch from `bee` to `iota-types`

* rename `bee::` alias to `iota::`

* Bump `packable` and `primitive-types`

* Fix CI

* Fix `cargo-sort`

* Fix `LICENSE`

* Remove macro for JSON responses

* Remove macros

* Consolodate enum responses

* fmt

Co-authored-by: Alex Coats <alexandcoats@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ humantime-serde = { version = "1.1", default-features = false }
 mongodb = { version = "2.2", default-features = false, features = [ "tokio-runtime" ] }
 pin-project = { version = "1.0", default-features = false }
 prefix-hex = { version = "0.5.0", default-features = false, features = [ "primitive-types" ] }
-primitive-types = { version = "0.11", default-features = false }
+primitive-types = { version = "0.12", default-features = false }
 serde = { version = "1.0", features = [ "derive" ], default-features = false }
 serde_bytes = { version = "0.11", default-features = false }
 serde_json = { version = "1.0", default-features = false, features = [ "std" ] }
@@ -57,7 +57,7 @@ ed25519-dalek = { version = "1.0", default-features = false, features = [ "u64_b
 hex = { version = "0.4", default-features = false, optional = true }
 hyper = { version = "0.14", default-features = false, features = [ "server", "tcp", "stream" ], optional = true }
 lazy_static = { version = "1.4", default-features = false, optional = true }
-packable = { version = "0.6", default-features = false, optional = true }
+packable = { version = "0.7", default-features = false, optional = true }
 rand = { version = "0.8", default-features = false, features = [ "std" ], optional = true }
 regex = { version = "1.5", default-features = false, features = [ "std" ], optional = true }
 rust-argon2 = { version = "1.0.0", default-features = false, optional = true }
@@ -79,11 +79,10 @@ opentelemetry-jaeger = { version = "0.17", default-features = false, features = 
 tracing-opentelemetry = { version = "0.18", default-features = false, features = [ "tracing-log" ], optional = true }
 
 # Stardust types
-bee-api-types-stardust = { package = "bee-api-types", version = "1.0.1", default-features = false, features = [ "axum" ], optional = true }
-bee-block-stardust = { package = "bee-block", version = "1.0.1", default-features = false, features = [ "dto", "inx", "rand", "std" ], optional = true }
-iota-types = { git = "https://github.com/iotaledger/iota.rs", version = "1.0.0-rc", default-features = false, features = [ "dto", "std", "rand" ], optional = true }
+iota-types = { git = "https://github.com/iotaledger/iota.rs", version = "1.0.0-rc", default-features = false, features = [ "api", "block", "std" ], optional = true }
 
 [dev-dependencies]
+iota-types = { git = "https://github.com/iotaledger/iota.rs", version = "1.0.0-rc", default-features = false, features = [ "api", "block", "std", "rand" ] }
 rand = { version = "0.8", default-features = false, features = [ "std" ] }
 
 [features]
@@ -122,11 +121,10 @@ opentelemetry = [
     "dep:tracing-opentelemetry",
 ]
 rand = [
-    "bee-block-stardust?/rand",
+    "iota-types?/rand",
 ]
 stardust = [
-    "dep:bee-block-stardust",
-    "dep:bee-api-types-stardust",
+    "dep:iota-types",
 ]
 
 [profile.production]
