feat(analytics)!: add time-series analytics (#805)
* Add time series analytics

* Fix overflow and add milestone analytics.

* Only carry over some analytics from prev. Add processor to store state across batches. Properly default hashmaps. Fix bug with unspent output counts. Cleanup.

* Update docs

* CI

* Use influxdb

* Revert influx to 1.8

* Use in-memory analytics rather than querying influx

* Config

* Remove influx reads

* Cleanup and feature gating

* Try to improve docker setup

* Remove create database

* PR suggestions

* Separate influx queries and analytics.

* Add tests for analytics processor and remove output count from storage deposit analytics. Fix output double counting.

* Fix claiming test and docs

* Fix feature gating

Co-authored-by: Jochen Görtler <jochen.goertler@iota.org>

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,6 +14,19 @@ services:
     ports:
       - 27017:27017
 
+  influx:
+    image: influxdb:1.8
+    container_name: influx
+    volumes:
+      - ./data/chronicle/influxdb:/var/lib/influxdb
+    environment:
+      - INFLUXDB_DB=chronicle_analytics
+      - INFLUXDB_ADMIN_USER=root
+      - INFLUXDB_ADMIN_PASSWORD=password
+      - INFLUXDB_HTTP_AUTH_ENABLED=true
+    ports:
+      - 8086:8086
+      
   inx-chronicle:
     container_name: inx-chronicle
     depends_on: [mongo, hornet]
@@ -28,12 +41,10 @@ services:
       - RUST_LOG=warn,inx_chronicle=debug
     tty: true
     command:
-      - "-c"
-      - "config.toml"
-      - "--inx-addr"
-      - "http://hornet:9029"
-      - "--mongodb-conn-str"
-      - "mongodb://mongo:27017"
+      - "--config=config.toml"
+      - "--inx-addr=http://hornet:9029"
+      - "--mongodb-conn-str=mongodb://mongo:27017"
+      - "--influxdb-url=http://influx:8086"
     volumes:
       - ../config.template.toml:/app/config.toml:ro
 
