--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ path = "src/bin/inx-chronicle/main.rs"
 async-trait = { version = "0.1", default-features = false }
 bytesize = { version = "1.1", default-features = false }
 clap = { version = "4.0", default-features = false, features = ["env", "derive", "std", "help", "usage", "error-context", "wrap_help"] }
+decimal = { version = "2.1", default-features = false, features = [ "ord_subset", "rustc-serialize", "serde" ] }
 derive_more = { version = "0.99", default-features = false, features = [ "add", "add_assign", "deref", "deref_mut" ] }
 dotenvy = { version = "0.15", default-features = false }
 futures = { version = "0.3", default-features = false }
@@ -67,6 +68,7 @@ tower-http = { version = "0.3", default-features = false, features = [ "cors", "
 zeroize = { version = "1.5", default-features = false, features = [ "std" ], optional = true }
 
 # INX
+influxdb = { version = "0.5", default-features = false, features = [ "use-serde", "reqwest-client-rustls", "derive" ], optional = true }
 inx = { version = "1.0.0-beta", default-features = false, optional = true }
 tonic = { version = "0.8", default-features = false, optional = true }
 
@@ -111,6 +113,7 @@ api = [
     "stardust",
 ]
 inx = [ 
+    "dep:influxdb",
     "dep:inx",
     "dep:packable",
     "dep:tonic",
