--- a/config.template.toml
+++ b/config.template.toml
@@ -14,6 +14,9 @@ database_name = "chronicle"
 min_pool_size = 2
 
 [influxdb]
+### Whether influx time-series data will be written.
+enabled = true
+
 ### URL pointing to the InfluxDB instance.
 url = "http://localhost:8086"
 
