--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,19 +13,6 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=root
     ports:
       - 27017:27017
-
-  influx:
-    image: influxdb:1.8
-    container_name: influx
-    volumes:
-      - ./data/chronicle/influxdb:/var/lib/influxdb
-    environment:
-      - INFLUXDB_DB=chronicle_analytics
-      - INFLUXDB_ADMIN_USER=root
-      - INFLUXDB_ADMIN_PASSWORD=password
-      - INFLUXDB_HTTP_AUTH_ENABLED=true
-    ports:
-      - 8086:8086
       
   inx-chronicle:
     container_name: inx-chronicle
@@ -102,6 +89,21 @@ services:
 
 ################################################################################
 # The following services can be enabled by setting the `metrics` profile.
+
+  influx:
+    image: influxdb:1.8
+    profiles:
+      - metrics
+    container_name: influx
+    volumes:
+      - ./data/chronicle/influxdb:/var/lib/influxdb
+    environment:
+      - INFLUXDB_DB=chronicle_analytics
+      - INFLUXDB_ADMIN_USER=root
+      - INFLUXDB_ADMIN_PASSWORD=password
+      - INFLUXDB_HTTP_AUTH_ENABLED=true
+    ports:
+      - 8086:8086
 
   prometheus:
     image: prom/prometheus:latest
