--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ time = { version = "0.3", default-features = false, features = [ "std" ] }
 tokio = { version = "1.21", default-features = false, features = [ "macros", "rt-multi-thread", "signal" ] }
 tokio-stream = { version = "0.1", default-features = false }
 toml = { version = "0.5", default-features = false }
-tracing = { version = "0.1", default-features = false, features = [ "std", "attributes" ] }
+tracing = { version = "0.1", default-features = false, features = [ "std", "attributes", "release_max_level_debug" ] }
 tracing-futures = { version = "0.2", default-features = false, features = [ "std", "std-future" ] }
 tracing-subscriber = { version = "0.3", default-features = false, features = [ "std", "fmt", "ansi", "smallvec", "tracing-log", "local-time", "env-filter" ] }
 uint = { version = "0.9", default-features = false }
