--- a/docker/assets/prometheus/prometheus.yml
+++ b/docker/assets/prometheus/prometheus.yml
@@ -1,16 +1,10 @@
 scrape_configs:
-
-  - job_name: inx-chronicle
-    scrape_interval: 5s
-    static_configs:
-      - targets: ['inx-chronicle:9100']
-
   - job_name: hornet
     scrape_interval: 5s
     static_configs:
-      - targets: ['hornet:9311']
+      - targets: ["hornet:9311"]
 
   - job_name: mongodb
     scrape_interval: 5s
     static_configs:
-      - targets: ['mongodb-exporter:9216']
+      - targets: ["mongodb-exporter:9216"]
