--- a/Cargo.toml
+++ b/Cargo.toml
@@ -117,6 +117,7 @@ inx = [
     "dep:inx",
     "dep:packable",
     "dep:tonic",
+    "stardust",
 ]
 opentelemetry = [
     "dep:opentelemetry",
@@ -128,6 +129,7 @@ rand = [
 ]
 stardust = [
     "dep:iota-types",
+    "dep:packable",
 ]
 
 [profile.production]
