--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,10 @@ uint = { version = "0.9", default-features = false }
 url = { version = "2.3", default-features = false }
 uuid = { version = "1.1", default-features = false, features = [ "v4" ] }
 
+# Optional
+chrono = { version = "0.4", default-features = false, features = [ "std" ], optional = true }
+influxdb = { version = "0.5", default-features = false, features = [ "use-serde", "reqwest-client-rustls", "derive" ], optional = true }
+
 # API
 auth-helper = { version = "0.3", default-features = false, optional = true }
 axum = { version = "0.5", default-features = false, features = [ "http1", "json", "query", "original-uri", "headers" ], optional = true }
@@ -68,7 +72,6 @@ tower-http = { version = "0.3", default-features = false, features = [ "cors", "
 zeroize = { version = "1.5", default-features = false, features = [ "std" ], optional = true }
 
 # INX
-influxdb = { version = "0.5", default-features = false, features = [ "use-serde", "reqwest-client-rustls", "derive" ], optional = true }
 inx = { version = "1.0.0-beta", default-features = false, optional = true }
 tonic = { version = "0.8", default-features = false, optional = true }
 
@@ -85,11 +88,15 @@ iota-types = { git = "https://github.com/iotaledger/iota.rs", version = "1.0.0-r
 rand = { version = "0.8", default-features = false, features = [ "std" ] }
 
 [features]
-default = [ 
+default = [
+    "analytics",
     "api",
-    "influxdb",
     "inx",
+    "metrics",
     "stardust",
+]
+analytics = [
+    "influxdb",
 ]
 api = [
     "dep:auth-helper",
@@ -114,6 +121,10 @@ inx = [
     "dep:inx",
     "dep:packable",
     "dep:tonic",
+]
+metrics = [
+    "influxdb",
+    "dep:chrono",
 ]
 opentelemetry = [
     "dep:opentelemetry",
