feat(cli)!: group CLI arguments and change INX config (#830)
* BREAKING CHANGE: refactor CLI and environment vars

* Make sync start a CLI arg

* Fix docker

* Remove dot notation and reorder

* Group CLI

* Fix docker

* Refactor

* Review comments

* Remove 'sync-start' from config template and from env vars

* Remove 'ArgGroup's bc they're not actually needed right now

* Sort '--help' output

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     tty: true
     command:
       - "--config=config.toml"
-      - "--inx-addr=http://hornet:9029"
+      - "--inx-url=http://hornet:9029"
       - "--mongodb-conn-str=mongodb://mongo:27017"
       - "--influxdb-url=http://influx:8086"
     volumes:
