--- a/Cargo.toml
+++ b/Cargo.toml
@@ -79,6 +79,9 @@ opentelemetry = { version = "0.18", default-features = false, features = [ "trac
 opentelemetry-jaeger = { version = "0.17", default-features = false, features = [ "rt-tokio" ], optional = true }
 tracing-opentelemetry = { version = "0.18", default-features = false, features = [ "tracing-log" ], optional = true }
 
+# PoI
+iota-crypto = { version = "0.15", default-features = false, features = [ "blake2b" ], optional = true }
+
 # Stardust types
 iota-types = { version = "1.0.0-rc", default-features = false, features = [ "api", "block", "std" ], optional = true }
 
@@ -125,6 +128,10 @@ inx = [
 metrics = [
     "influxdb",
     "dep:chrono",
+]
+poi = [
+    "api",
+    "dep:iota-crypto",
 ]
 opentelemetry = [
     "dep:opentelemetry",
