--- a/Cargo.toml
+++ b/Cargo.toml
@@ -95,7 +95,7 @@ default = [
     "stardust",
 ]
 analytics = [
-    "influxdb",
+    "dep:influxdb",
 ]
 api = [
     "dep:auth-helper",
@@ -123,7 +123,7 @@ inx = [
     "stardust",
 ]
 metrics = [
-    "influxdb",
+    "dep:influxdb",
     "dep:chrono",
 ]
 opentelemetry = [
