--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -32,6 +32,7 @@ services:
       - "--inx-url=http://hornet:9029"
       - "--mongodb-conn-str=mongodb://mongo:27017"
       - "--influxdb-url=http://influx:8086"
+      - "--loki-url=http://loki:3100"
     volumes:
       - ../config.template.toml:/app/config.toml:ro
 
