--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,6 @@ uuid = { version = "1.1", default-features = false, features = [ "v4" ] }
 # Optional
 chrono = { version = "0.4", default-features = false, features = [ "std" ], optional = true }
 influxdb = { version = "0.5", default-features = false, features = [ "use-serde", "reqwest-client-rustls", "derive" ], optional = true }
-tracing-loki = { version = "0.2", default-features = false, features = [ "compat-0-2-1", "native-tls" ], optional = true }
 
 # API
 auth-helper = { version = "0.3", default-features = false, optional = true }
@@ -79,6 +78,9 @@ tonic = { version = "0.8", default-features = false, optional = true }
 opentelemetry = { version = "0.18", default-features = false, features = [ "trace", "rt-tokio" ], optional = true }
 opentelemetry-jaeger = { version = "0.17", default-features = false, features = [ "rt-tokio" ], optional = true }
 tracing-opentelemetry = { version = "0.18", default-features = false, features = [ "tracing-log" ], optional = true }
+
+# Loki
+tracing-loki = { version = "0.2", default-features = false, features = [ "compat-0-2-1", "native-tls" ], optional = true }
 
 # Stardust types
 iota-types = { version = "1.0.0-rc", default-features = false, features = [ "api", "block", "std" ], optional = true }
