--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,11 +1,10 @@
-version: '3'
+version: "3"
 services:
-
   mongo:
     image: mongo:latest
     container_name: mongo
     # Warning: We don't keep logs to make development simpler
-    command: ["--quiet", "--logpath", "/dev/null"]  
+    command: ["--quiet", "--logpath", "/dev/null"]
     volumes:
       - ./data/chronicle/mongodb:/data/db
     environment:
@@ -13,7 +12,7 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=root
     ports:
       - 27017:27017
-      
+
   inx-chronicle:
     container_name: inx-chronicle
     depends_on: [mongo, hornet]
@@ -22,8 +21,8 @@ services:
       dockerfile: docker/Dockerfile.debug
     image: inx-chronicle:dev
     ports:
-      - "8042:8042/tcp"   # REST API
-      - "9100:9100/tcp"   # Metrics
+      - "8042:8042/tcp" # REST API
+      - "9100:9100/tcp" # Metrics
     environment:
       - RUST_LOG=warn,inx_chronicle=debug
     tty: true
@@ -61,10 +60,10 @@ services:
       - "15600:15600/tcp" # Gossip
       - "14626:14626/udp" # Autopeering
       - "14265:14265/tcp" # REST API
-      - "8081:8081/tcp"   # Dashboard
-      - "8091:8091/tcp"   # Faucet
-      - "9311:9311/tcp"   # Prometheus
-      - "9029:9029/tcp"   # INX
+      - "8081:8081/tcp" # Dashboard
+      - "8091:8091/tcp" # Faucet
+      - "9311:9311/tcp" # Prometheus
+      - "9029:9029/tcp" # INX
     cap_drop:
       - ALL
     volumes:
@@ -83,8 +82,8 @@ services:
       - "--prometheus.enabled=true"
       - "--prometheus.bindAddress=0.0.0.0:9311"
 
-################################################################################
-# The following services can be enabled by setting the `debug` profile.
+  ################################################################################
+  # The following services can be enabled by setting the `debug` profile.
 
   mongo-express:
     image: mongo-express
@@ -101,8 +100,8 @@ services:
       - ME_CONFIG_OPTIONS_READONLY=true
       - VCAP_APP_PORT=8084
 
-################################################################################
-# The following services can be enabled by setting the `metrics` profile.
+  ################################################################################
+  # The following services can be enabled by setting the `metrics` profile.
 
   prometheus:
     image: prom/prometheus:latest
@@ -118,8 +117,8 @@ services:
       - ./assets/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
       - /etc/localtime:/etc/localtime:ro
     command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
-      - '--web.external-url=http://localhost:9090'
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--web.external-url=http://localhost:9090"
 
   mongodb-exporter:
     image: percona/mongodb_exporter:0.34
@@ -133,12 +132,12 @@ services:
     ports:
       - 9216:9261
     command:
-      - '--mongodb.uri=mongodb://root:root@mongo:27017'
-      - '--mongodb.direct-connect=true'
-      - '--web.listen-address=:9216'
-      - '--log.level=info'
-      - '--discovering-mode'
-      - '--collect-all'
+      - "--mongodb.uri=mongodb://root:root@mongo:27017"
+      - "--mongodb.direct-connect=true"
+      - "--web.listen-address=:9216"
+      - "--log.level=info"
+      - "--discovering-mode"
+      - "--collect-all"
 
   grafana:
     image: grafana/grafana:latest
@@ -189,4 +188,3 @@ services:
       - ./assets/promtail/:/etc/promtail/
       - ./data/promtail/log:/var/log
     command: -config.file=/etc/promtail/config.yml
-    
