--- a/documentation/api/api-poi.yaml
+++ b/documentation/api/api-poi.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.3
 info:
   title: POI REST API
-  description: This document specifies the REST API for POI (proof of inclusion) in Chronicle.
+  description: This document specifies the REST API for PoI (Proof of Inclusion) in Chronicle.
   contact:
     email: contact@iota.org
   license:
@@ -12,7 +12,7 @@ externalDocs:
   description: Find out more about IOTA
   url: https://iota.org
 servers:
-  - url: http://127.0.0.1:14265
+  - url: http://127.0.0.1:8042
 tags:
   - name: create
     description: Proof-of-Inclusion creation.
