--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,7 +99,7 @@ default = [
     "stardust",
 ]
 analytics = [
-    "influxdb",
+    "dep:influxdb",
 ]
 api = [
     "dep:auth-helper",
@@ -130,7 +130,7 @@ loki = [
     "dep:tracing-loki",
 ]
 metrics = [
-    "influxdb",
+    "dep:influxdb",
     "dep:chrono",
 ]
 opentelemetry = [
