--- a/documentation/api/api-explorer.yml
+++ b/documentation/api/api-explorer.yml
@@ -109,9 +109,9 @@ paths:
     get:
       tags:
         - ledger
-      summary: Get all ledger updates involving a given bech32 address.
+      summary: Returns all ledger updates involving a given bech32 address.
       description: >-
-        Get all ledger updates involving a given bech32 address.
+        Returns all ledger updates involving a given bech32 address, sorted by milestone index.
       parameters:
         - $ref: "#/components/parameters/address"
         - $ref: "#/components/parameters/pageSize"
@@ -138,8 +138,8 @@ paths:
     get:
       tags:
         - ledger
-      summary: Get all ledger updates for a given milestone index.
-      description: Get all ledger updates for a given milestone index.
+      summary: Returns all ledger updates for a given milestone index.
+      description: Returns all ledger updates that occurred in the milestone with the provided index.
       parameters:
         - $ref: "#/components/parameters/milestoneId"
         - $ref: "#/components/parameters/pageSize"
@@ -166,7 +166,7 @@ paths:
         - ledger
       summary: Returns the top richest addresses.
       description: >-
-        Returns analytics about the top richest addresses at the ledger state specified by the provided index
+        Returns the top richest addresses at the ledger state specified by the provided index.
       parameters:
         - $ref: "#/components/parameters/ledgerIndex"
         - $ref: "#/components/parameters/top"
@@ -192,7 +192,7 @@ paths:
         - ledger
       summary: Returns the current token distribution.
       description: >-
-        Returns analytics about the distribution of IOTA tokens at the ledger state specified by the provided index
+        Returns the distribution of IOTA tokens at the ledger state specified by the provided index.
       parameters:
         - $ref: "#/components/parameters/ledgerIndex"
       responses:
@@ -493,7 +493,7 @@ components:
         type: number
       example: 100
       required: false
-      description: The milestone index to be used to determine the ledger state. Defaults to 200.
+      description: The number of richest addresses to return.
   examples:
     balance-example:
       value:
