--- a/docker/assets/grafana/datasources/influx_metrics_ds.yml
+++ b/docker/assets/grafana/datasources/influx_metrics_ds.yml
@@ -1,14 +1,14 @@
 apiVersion: 1
 
 deleteDatasources:
-  - name: InfluxDB
+  - name: InfluxDB Metrics
     orgId: 1
 
 datasources:
-  - name: InfluxDB
+  - name: InfluxDB Metrics
     type: influxdb
     access: proxy
-    database: chronicle_analytics
+    database: chronicle_metrics
     user: root
     url: http://influx:8086
     jsonData:
