--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -46,8 +46,8 @@ services:
     container_name: influx
     volumes:
       - ./data/chronicle/influxdb:/var/lib/influxdb
+      - ./assets/influxdb/init.iql:/docker-entrypoint-initdb.d/influx_init.iql
     environment:
-      - INFLUXDB_DB=chronicle_analytics
       - INFLUXDB_ADMIN_USER=root
       - INFLUXDB_ADMIN_PASSWORD=password
       - INFLUXDB_HTTP_AUTH_ENABLED=true
