Let's try enforcing MongoDb auth

--- a/.github/workflows/_test_int.yml
+++ b/.github/workflows/_test_int.yml
@@ -17,6 +17,9 @@ jobs:
   test-int:
     name: "${{ inputs.os }}, ${{ inputs.rust }}"
     runs-on: ${{ inputs.os }}
+    env:
+      MONGO_INITDB_ROOT_USERNAME: "root"
+      MONGO_INITDB_ROOT_PASSWORD: "root"
     steps:
       - uses: actions/checkout@v2
 
