Re-enable replica set for integration tests

--- a/.github/workflows/_test_int.yml
+++ b/.github/workflows/_test_int.yml
@@ -37,9 +37,9 @@ jobs:
         uses: supercharge/mongodb-github-action@1.8.0
         with:
           mongodb-version: ${{ inputs.mongodb }}
-          #mongodb-replica-set: test-rs
-          mongodb-username: root
-          mongodb-password: root
+          mongodb-replica-set: test-rs
+          #mongodb-username: root
+          #mongodb-password: root
 
       - name: Test DB
         uses: actions-rs/cargo@v1
